--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="Images/favicon.jpg" type="image/x-icon">
     <!-- Css Comentado -->
     <!-- <link rel="stylesheet" href="style.css"> -->
+    <!-- Css Bootstrap personalizado -->
+    <link rel="stylesheet" href="styleBootstrap.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS link -->
@@ -19,11 +21,11 @@
             <!-- Header -->
             <header>
                 <div class="row">
-                    <div class= "col p-5">
+                    <div class= "col p-5 col-12 col-md-6 text-center text-md-start">
                         <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
-                        <h1 class="p-3 topHeader__title">Mifar</h1>
+                        <h1 class="p-3">Mifar</h1>
                     </div>
-                    <div class="col text-center d-flex align-items-center justify-content-center p-5">
+                    <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
                         <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
                     </div>
                 </div>
@@ -45,19 +47,17 @@
                 </div>
             </nav>
             <!-- Main -->
-            <main class="mainIndex m-3">
-                <div class="container-fluid">
-                    <div class="row bg-info.bg-gradient bg-info p-5">
-                        <div class="col-lg-6 lead">
-                            <div class="d-flex justify-content-center">
-                                <h2 class="mainIndex__text--title ">Lorem, ipsum.</h2>
-                            </div>
-                            <p class="mainIndex__text mainIndex__text--p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
-                            <p class="mainIndex__text mainIndex__text--p2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. In quae facilis sapiente quisquam ullam laboriosam fugiat nisi atque.</p>
+            <main class="container ">
+                <div class="row bg-info.bg-gradient bg-info p-5 m-3">
+                    <div class="col-lg-6 lead">
+                        <div class="d-flex justify-content-center">
+                            <h2 class="">Lorem, ipsum.</h2>
                         </div>
-                        <div class="col-lg-6 img-fluid">
-                            <img class="img-thumbnail img-fluid" src="Images/indexsample.jpg" alt="indexsample">
-                        </div>
+                        <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
+                        <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. In quae facilis sapiente quisquam ullam laboriosam fugiat nisi atque.</p>
+                    </div>
+                    <div class="col-lg-6 img-fluid">
+                        <img class="img-thumbnail img-fluid" src="Images/indexsample.jpg" alt="indexsample">
                     </div>
                 </div>
             </main>
