--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="Images/favicon.jpg" type="image/x-icon">
     <!-- Css Comentado -->
     <!-- <link rel="stylesheet" href="style.css"> -->
+    <!-- Css Bootstrap personalizado -->
+    <link rel="stylesheet" href="styleBootstrap.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS link -->
@@ -19,11 +21,11 @@
             <!-- Header -->
             <header>
                 <div class="row">
-                    <div class= "col p-5">
+                    <div class= "col p-5 col-12 col-md-6 text-center text-md-start">
                         <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
-                        <h1 class="p-3 topHeader__title">Mifar</h1>
+                        <h1 class="p-3">Mifar</h1>
                     </div>
-                    <div class="col text-center d-flex align-items-center justify-content-center p-5">
+                    <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
                         <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
                     </div>
                 </div>
@@ -45,8 +47,8 @@
                 </div>
             </nav>
         <!-- Main -->
-        <main class="container bg-info">
-            <div class="container-fluid p-5">
+        <main class="container">
+            <div class="p-5 m-3 bg-info">
                 <div class="col text-center lead">
                     <h2 class="p-3 m-1">Lorem, ipsum.</h2>
                     <p class="p-3 m-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint beatae, atque facere quis quasi animi?</p>
@@ -56,13 +58,16 @@
                 <div class="col text-center">
                     <form class="m-5" action="">
                         <div class="p-3">
-                            <label class="form-group m-3" for="phone">Ingrese su numero de telefono:</label><input class="inputForm__contact inputForm__contact--phone" type="number" name="phone" id="" placeholder="Telefono" required>
+                            <label class="col-12 col-md-4 form-group m-md-3 text-center" for="phone">Ingrese su numero de telefono:</label>
+                            <input class="col-12 col-md-4" type="number" name="phone" id="" placeholder="Telefono" required>
                         </div>
                         <div>
-                            <label class="p-3 form-group m-5" for="email">Ingrese su Email:</label><input class="inputForm__contact inputForm__contact--email" type="email" name="email" id="" placeholder="Email" required>
+                            <label class="col-12 col-md-4 form-group m-md-3 text-center" for="email">Ingrese su Email:</label>
+                            <input class="col-12 col-md-4" type="email" name="email" id="" placeholder="Email" required>
                         </div>
                         <div class="">
-                            <label class="p-3 m-3 form-group m-5" for="extra">Consulta:</label><textarea class="inputForm__contact inputForm__contact--extra p-2" name="extra" id="" cols="25" rows="8" placeholder="Ingrese aqui su consulta"></textarea>
+                            <label class="col-12 col-md-6 p-3 m-1 form-group text-center" for="extra">Consulta:</label>
+                            <textarea class="col-12 col-md-6 m-3" name="extra" id="" cols="25" rows="8" placeholder="Ingrese aqui su consulta"></textarea>
                         </div>
                         <div>
                             <button type="button" class="btn btn-success m-2">Enviar</button>
