--- a/nosotros.html
+++ b/nosotros.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="Images/favicon.jpg" type="image/x-icon">
     <!-- Css Comentado -->
     <!-- <link rel="stylesheet" href="style.css"> -->
+    <!-- Css Bootstrap personalizado -->
+    <link rel="stylesheet" href="styleBootstrap.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS link -->
@@ -19,11 +21,11 @@
             <!-- Header -->
             <header>
                 <div class="row">
-                    <div class= "col p-5">
+                    <div class= "col p-5 col-12 col-md-6 text-center text-md-start">
                         <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
-                        <h1 class="p-3 topHeader__title">Mifar</h1>
+                        <h1 class="p-3">Mifar</h1>
                     </div>
-                    <div class="col text-center d-flex align-items-center justify-content-center p-5">
+                    <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
                         <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
                     </div>
                 </div>
@@ -46,7 +48,7 @@
             </nav>
         <!-- main -->
         <main class="container">
-            <div class="container-fluid text-center bg-info p-5 lead">
+            <div class="text-center bg-info p-5 lead m-3">
                 <div class="">
                     <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail" src="Images/hombre1.jpg" alt="hombre1"></a>
                     <div class="">
