--- a/prestadores.html
+++ b/prestadores.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="Images/favicon.jpg" type="image/x-icon">
     <!-- Css Comentado -->
     <!-- <link rel="stylesheet" href="style.css"> -->
+    <!-- Css Bootstrap personalizado -->
+    <link rel="stylesheet" href="styleBootstrap.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS link -->
@@ -19,11 +21,11 @@
             <!-- Header -->
             <header>
                 <div class="row">
-                    <div class= "col p-5">
+                    <div class= "col p-5 col-12 col-md-6 text-center text-md-start">
                         <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
-                        <h1 class="p-3 topHeader__title">Mifar</h1>
+                        <h1 class="p-3">Mifar</h1>
                     </div>
-                    <div class="col text-center d-flex align-items-center justify-content-center p-5">
+                    <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
                         <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
                     </div>
                 </div>
@@ -45,8 +47,8 @@
                 </div>
             </nav>
     <!-- Main -->
-    <main class="m-3 bg-info">
-        <div class="container-fluid">
+    <main class="container">
+        <div class="m-3 bg-info">
             <div class="col">
                 <div class="lead text-center m-3 p-3">
                     <h2 class="">Lorem, ipsum.</h2>
