Preentrega Bootstrap con Animaciones

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                 <div class="row bg-info.bg-gradient bg-info p-5 m-3">
                     <div class="col-lg-6 lead">
                         <div class="d-flex justify-content-center">
-                            <h2 class="">Lorem, ipsum.</h2>
+                            <h2 class="mainIndex__text--title">Lorem, ipsum.</h2>
                         </div>
-                        <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
-                        <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. In quae facilis sapiente quisquam ullam laboriosam fugiat nisi atque.</p>
+                        <p class="mainIndex__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
+                        <p class="mainIndex__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. In quae facilis sapiente quisquam ullam laboriosam fugiat nisi atque.</p>
                     </div>
                     <div class="col-lg-6 img-fluid">
                         <img class="img-thumbnail img-fluid" src="Images/indexsample.jpg" alt="indexsample">
