--- a/prestadores.html
+++ b/prestadores.html
@@ -51,15 +51,15 @@
         <div class="m-3 bg-info">
             <div class="col">
                 <div class="lead text-center m-3 p-3">
-                    <h2 class="">Lorem, ipsum.</h2>
-                    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
-                    <ul class="text-decoration-none list-unstyled">
+                    <h2 class="mainPrestadores__title">Lorem, ipsum.</h2>
+                    <p class="mainPrestadores__p--1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
+                    <ul class="text-decoration-none list-unstyled mainPrestadores__ul--1">
                         <li class="">Lorem ipsum dolor sit amet.</li>
                         <li class="">Lorem, ipsum dolor sit amet consectetur.</li>
                         <li class="">Lorem ipsum dolor sit amet.</li>
                     </ul>
-                    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sed at accusamus itaque assumenda fugit. Consectetur architecto optio unde, doloremque, dolores, nihil facilis voluptas deserunt nesciunt sint expedita. Maiores, rem.</p>
-                    <ul class="text-decoration-none list-unstyled">
+                    <p class="mainPrestadores__p--2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sed at accusamus itaque assumenda fugit. Consectetur architecto optio unde, doloremque, dolores, nihil facilis voluptas deserunt nesciunt sint expedita. Maiores, rem.</p>
+                    <ul class="text-decoration-none list-unstyled mainPrestadores__ul--2">
                         <li class="">Lorem ipsum dolor sit amet consectetur.</li>
                         <li class="">Lorem ipsum dolor sit.</li>
                         <li class="">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
