--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Css Comentado -->
     <!-- <link rel="stylesheet" href="style.css"> -->
     <!-- Css Bootstrap personalizado -->
-    <link rel="stylesheet" href="styleBootstrap.css">
+    <link rel="stylesheet" href="css/styleBootstrap.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS link -->
