Cambio de bg y optimizaciones minimas

--- a/asociarse.html
+++ b/asociarse.html
@@ -48,7 +48,7 @@
             </nav>
         <!-- Main -->
         <main class="container">
-            <div class="col bg-info m-3 p-3">
+            <div class="col m-3 p-3">
                 <div class="lead text-center m-2">
                     <h2 class="">Lorem, ipsum.</h2>
                     <p class="p-3">Con los siguientes datos un asesor capacitado se comunicara con usted y le brindara mas informacion.</p>
@@ -73,7 +73,7 @@
                                 <input class="col-12 col-md-4" type="date" name="age" id="" required>
                             </div>
                             <div class="text-center m-5 p-3">
-                                <button type="button " class="btn btn-success">Enviar</button>
+                                <button type="button " class="btn btn-primary">Enviar</button>
                             </div>
                         </div>
                     </form>
