--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
             </nav>
         <!-- Main -->
         <main class="container">
-            <div class="p-5 m-3 bg-info">
+            <div class="p-5 m-3">
                 <div class="col text-center lead">
                     <h2 class="p-3 m-1">Lorem, ipsum.</h2>
                     <p class="p-3 m-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint beatae, atque facere quis quasi animi?</p>
