--- a/nosotros.html
+++ b/nosotros.html
@@ -48,23 +48,23 @@
             </nav>
         <!-- main -->
         <main class="container">
-            <div class="text-center bg-info p-5 lead m-3">
+            <div class="text-center p-5 lead m-3">
                 <div class="">
-                    <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--1" src="Images/hombre1.jpg" alt="hombre1"></a>
+                    <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--1 hover__img" src="Images/hombre1.jpg" alt="hombre1"></a>
                     <div class="mainNosotros__textContainer--1">
                         <h3 class="p-3 m-2">Lorem, ipsum.</h3>
                         <p class="">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
                     </div>
                 </div>
                 <div class="">
-                    <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--2" src="Images/hombre2.jpg" alt="hombre2"></a>
+                    <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--2 hover__img" src="Images/hombre2.jpg" alt="hombre2"></a>
                     <div class="mainNosotros__textContainer--2">
                         <h3 class="p-3 m-2">Lorem, ipsum.</h3>
                         <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
                     </div>
                 </div>
                 <div class="">
-                    <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--3" src="Images/hombre3.jpg" alt="hombre3"></a>
+                    <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--3 hover__img" src="Images/hombre3.jpg" alt="hombre3"></a>
                     <div class="mainNosotros__textContainer--3">
                         <h3 class="p-3 m-2">Lorem, ipsum.</h3>
                         <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, impedit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
