--- a/prestadores.html
+++ b/prestadores.html
@@ -48,7 +48,7 @@
             </nav>
     <!-- Main -->
     <main class="container">
-        <div class="m-3 bg-info">
+        <div class="m-3">
             <div class="col">
                 <div class="lead text-center m-3 p-3">
                     <h2 class="mainPrestadores__title">Lorem, ipsum.</h2>
