--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 </div>
             </nav>
             <!-- Main -->
-            <main class="container ">
-                <div class="row bg-info.bg-gradient bg-info p-5 m-3">
+            <main class="container">
+                <div class="row p-5 m-3">
                     <div class="col-lg-6 lead">
                         <div class="d-flex justify-content-center">
                             <h2 class="mainIndex__text--title">Lorem, ipsum.</h2>
