--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                 <div class="row">
                     <div class= "col p-5 col-12 col-md-6 text-center text-md-start">
                         <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
-                        <h1 class="p-3">Mifar</h1>
+                        <h1 class="p-3 header__title">Mifar</h1>
                     </div>
                     <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
                         <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
@@ -37,11 +37,11 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <ul class="navbar-nav list-unstyled list-inline f justify-content-space-between">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="prestadores.html">Prestadores</a></li>
                             <li class="nav-item"><a class="nav-link" href="asociarse.html">Asociarse</a></li>
                             <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
                         </ul>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                         </div>
                         <div class="">
                             <label class="col-12 col-md-6 p-3 m-1 form-group text-center" for="extra">Consulta:</label>
-                            <textarea class="col-12 col-md-6 m-3" name="extra" id="" cols="25" rows="8" placeholder="Ingrese aqui su consulta"></textarea>
+                            <textarea class="col-12 col-md-6 m-md-3" name="extra" id="" cols="25" rows="8" placeholder="Ingrese aqui su consulta"></textarea>
                         </div>
                         <div>
                             <button type="button" class="btn btn-success m-2">Enviar</button>
