--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="row">
                     <div class= "col p-5 col-12 col-md-6 text-center text-md-start">
                         <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
-                        <h1 class="p-3">Mifar</h1>
+                        <h1 class="p-3 header__title">Mifar</h1>
                     </div>
                     <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
                         <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
@@ -57,7 +57,32 @@
                         <p class="mainIndex__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. In quae facilis sapiente quisquam ullam laboriosam fugiat nisi atque.</p>
                     </div>
                     <div class="col-lg-6 img-fluid">
-                        <img class="img-thumbnail img-fluid" src="Images/indexsample.jpg" alt="indexsample">
+                        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-indicators">
+                              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            </div>
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img src="Images/hospital1.jpg" class="d-block w-100" alt="Mifar">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="Images/hospital2.jpg" class="d-block w-100" alt="Mifar">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="Images/hospital3.jpg" class="d-block w-100" alt="Mifar">
+                              </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </main>
