--- a/prestadores.html
+++ b/prestadores.html
@@ -23,7 +23,7 @@
                 <div class="row">
                     <div class= "col p-5 col-12 col-md-6 text-center text-md-start">
                         <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
-                        <h1 class="p-3">Mifar</h1>
+                        <h1 class="p-3 header__title">Mifar</h1>
                     </div>
                     <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
                         <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
@@ -37,8 +37,8 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <ul class="navbar-nav list-unstyled list-inline f justify-content-space-between">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="prestadores.html">Prestadores</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="prestadores.html">Prestadores</a></li>
                             <li class="nav-item"><a class="nav-link" href="asociarse.html">Asociarse</a></li>
                             <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
