--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
                     <div class="col-md-6 justify-items-center align-content-center p-3">
                         <div class="row justify-content-center align-items-center">
                             <div class="row w-25">
-                                <a class="d-flex justify-content-center align-items-center" href="https://instagram.com" target="_blank"> <img src="Images/instagram.svg" ></svg></a>
+                                <a class="d-flex justify-content-center align-items-center" href="https://instagram.com" target="_blank"> <img class="hover__img" src="Images/instagram.svg" ></svg></a>
                             </div>
                             <div class="row w-25">
-                                <a class="d-flex justify-content-center align-items-center" href="https://twitter.com" target="_blank"><img src="Images/twitter.svg" alt="Twitter"></a>
+                                <a class="d-flex justify-content-center align-items-center" href="https://twitter.com" target="_blank"><img class="hover__img" src="Images/twitter.svg" alt="Twitter"></a>
                             </div>
                             <div class="row w-25">
-                                <a class="d-flex justify-content-center align-items-center" href="https://facebook.com" target="_blank"><img src="Images/facebook.svg" alt="Facebook"></a>
+                                <a class="d-flex justify-content-center align-items-center" href="https://facebook.com" target="_blank"><img class="hover__img" src="Images/facebook.svg" alt="Facebook"></a>
                             </div>
                         </div>
                     </div>
