--- a/prestadores.html
+++ b/prestadores.html
@@ -37,8 +37,8 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <ul class="navbar-nav list-unstyled list-inline f justify-content-space-between">
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="prestadores.html">Prestadores</a></li>
+                            <li class="nav-item"><a class="nav-link " href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="prestadores.html">Prestadores</a></li>
                             <li class="nav-item"><a class="nav-link" href="asociarse.html">Asociarse</a></li>
                             <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
@@ -72,7 +72,7 @@
         </div>
     </main>
     <!-- Footer -->
-    <footer class="">
+    <footer class="p-3">
         <div class="row">
             <div class="col-md-6 text-center text-md-start">
                 <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
@@ -81,13 +81,13 @@
             <div class="col-md-6 justify-items-center align-content-center p-3">
                 <div class="row justify-content-center align-items-center">
                     <div class="row w-25">
-                        <a class="d-flex justify-content-center align-items-center" href="https://instagram.com" target="_blank"> <img src="Images/instagram.svg" ></svg></a>
+                        <a class="d-flex justify-content-center align-items-center" href="https://instagram.com" target="_blank"> <img class="hover__img" src="Images/instagram.svg" ></svg></a>
                     </div>
                     <div class="row w-25">
-                        <a class="d-flex justify-content-center align-items-center" href="https://twitter.com" target="_blank"><img src="Images/twitter.svg" alt="Twitter"></a>
+                        <a class="d-flex justify-content-center align-items-center" href="https://twitter.com" target="_blank"><img class="hover__img" src="Images/twitter.svg" alt="Twitter"></a>
                     </div>
                     <div class="row w-25">
-                        <a class="d-flex justify-content-center align-items-center" href="https://facebook.com" target="_blank"><img src="Images/facebook.svg" alt="Facebook"></a>
+                        <a class="d-flex justify-content-center align-items-center" href="https://facebook.com" target="_blank"><img class="hover__img" src="Images/facebook.svg" alt="Facebook"></a>
                     </div>
                 </div>
             </div>
