--- a/index.html
+++ b/index.html
@@ -59,28 +59,28 @@
                     <div class="col-lg-6 img-fluid">
                         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-indicators">
-                              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
                             </div>
                             <div class="carousel-inner">
-                              <div class="carousel-item active">
-                                <img src="Images/hospital1.jpg" class="d-block w-100" alt="Mifar">
-                              </div>
-                              <div class="carousel-item">
-                                <img src="Images/hospital2.jpg" class="d-block w-100" alt="Mifar">
-                              </div>
-                              <div class="carousel-item">
-                                <img src="Images/hospital3.jpg" class="d-block w-100" alt="Mifar">
-                              </div>
+                                <div class="carousel-item active">
+                                    <img src="Images/hospital1.jpg" class="d-block w-100" alt="Mifar">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="Images/hospital2.jpg" class="d-block w-100" alt="Mifar">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="Images/hospital3.jpg" class="d-block w-100" alt="Mifar">
+                                </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Previous</span>
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
                             </button>
                             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Next</span>
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
                             </button>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                         <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
                         <p class="footerText footerText--p2" >Telefono emergencias: 0800-111-000</p>
                     </div>
-                    <div class="col-md-6 justify-items-center align-content-center p-3">
+                    <div class="col-md-6">
                         <div class="row justify-content-center align-items-center">
                             <div class="row w-25">
                                 <a class="d-flex justify-content-center align-items-center" href="https://instagram.com" target="_blank"> <img class="hover__img" src="Images/instagram.svg" ></svg></a>
