--- a/nosotros.html
+++ b/nosotros.html
@@ -19,19 +19,19 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="container">
-            <!-- Header -->
-            <header>
-                <div class="row">
-                    <div class= "col p-3 col-12 col-md-6 text-center text-md-start">
-                        <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="Logo Mifar" class="top__header--logo"></a>
-                        <h1 class="p-3 header__title">Mifar</h1>
-                    </div>
-                    <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
-                        <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
-                    </div>
+        <!-- Header -->
+        <header>
+            <div class="row">
+                <div class= "col p-3 col-12 col-md-6 text-center text-md-start">
+                    <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="Logo Mifar" class="top__header--logo"></a>
+                    <h1 class="p-3 header__title">Mifar</h1>
                 </div>
-            </header>
+                <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
+                    <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
+                </div>
+            </div>
+        </header>
+        <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,34 +48,35 @@
                     </div>
                 </div>
             </nav>
-        <!-- main -->
-        <main class="container">
-            <div class="text-center p-5 lead m-0">
-                <div class="">
-                    <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--1 hover__img" src="Images/hombre1.jpg" alt="Juan"></a>
-                    <div class="mainNosotros__textContainer--1">
-                        <h3 class="p-3 m-2">Lorem, ipsum.</h3>
-                        <p class="">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
+            <!-- main -->
+            <main class="container-fluid">
+                <div class="text-center p-5 lead m-0">
+                    <div class="">
+                        <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--1 hover__img" src="Images/hombre1.jpg" alt="Juan"></a>
+                        <div class="mainNosotros__textContainer--1">
+                            <h3 class="p-3 m-2">Lorem, ipsum.</h3>
+                            <p class="">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
+                        </div>
+                    </div>
+                    <div class="">
+                        <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--2 hover__img" src="Images/hombre2.jpg" alt="Jose"></a>
+                        <div class="mainNosotros__textContainer--2">
+                            <h3 class="p-3 m-2">Lorem, ipsum.</h3>
+                            <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
+                        </div>
+                    </div>
+                    <div class="">
+                        <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--3 hover__img" src="Images/hombre3.jpg" alt="Jorge"></a>
+                        <div class="mainNosotros__textContainer--3">
+                            <h3 class="p-3 m-2">Lorem, ipsum.</h3>
+                            <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, impedit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="">
-                    <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--2 hover__img" src="Images/hombre2.jpg" alt="Jose"></a>
-                    <div class="mainNosotros__textContainer--2">
-                        <h3 class="p-3 m-2">Lorem, ipsum.</h3>
-                        <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
-                    </div>
-                </div>
-                <div class="">
-                    <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--3 hover__img" src="Images/hombre3.jpg" alt="Jorge"></a>
-                    <div class="mainNosotros__textContainer--3">
-                        <h3 class="p-3 m-2">Lorem, ipsum.</h3>
-                        <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, impedit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
-                    </div>
-                </div>
-            </div>
-        </main>
+            </main>
+        </div>
         <!-- Footer -->
-        <footer class="p-3">
+        <footer class="p-3 m-2">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start">
                     <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
