--- a/contact.html
+++ b/contact.html
@@ -19,19 +19,19 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="container">
-            <!-- Header -->
-            <header>
-                <div class="row">
-                    <div class= "col p-3 col-12 col-md-6 text-center text-md-start">
-                        <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="Logo Mifar" class="top__header--logo"></a>
-                        <h1 class="p-3 header__title">Mifar</h1>
-                    </div>
-                    <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
-                        <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
-                    </div>
+        <!-- Header -->
+        <header>
+            <div class="row">
+                <div class= "col p-3 col-12 col-md-6 text-center text-md-start">
+                    <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="Logo Mifar" class="top__header--logo"></a>
+                    <h1 class="p-3 header__title">Mifar</h1>
                 </div>
-            </header>
+                <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
+                    <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
+                </div>
+            </div>
+        </header>
+        <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,38 +48,39 @@
                     </div>
                 </div>
             </nav>
-        <!-- Main -->
-        <main class="container">
-            <div class="p-5 m-0">
-                <div class="col text-center lead">
-                    <h2 class="p-3 m-1">Lorem, ipsum.</h2>
-                    <p class="p-3 m-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint beatae, atque facere quis quasi animi?</p>
-                    <img class="img-thumbnail col-lg-6 img-fluid m-1" src="Images/contactsample.jpg" alt="Imagen de contacto">
+            <!-- Main -->
+            <main class="container-fluid">
+                <div class="p-5 m-0">
+                    <div class="col text-center lead">
+                        <h2 class="p-3 m-1">Lorem, ipsum.</h2>
+                        <p class="p-3 m-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint beatae, atque facere quis quasi animi?</p>
+                        <img class="img-thumbnail col-lg-6 img-fluid m-1" src="Images/contactsample.jpg" alt="Imagen de contacto">
+                    </div>
+                    <!-- Form -->
+                    <div class="col text-center">
+                        <form class="m-5" action="">
+                            <div class="p-3">
+                                <label class="col-12 col-md-4 form-group m-md-3 text-center" for="phone">Ingrese su numero de telefono:</label>
+                                <input class="col-12 col-md-4" type="number" name="phone" id="" placeholder="Telefono" required>
+                            </div>
+                            <div>
+                                <label class="col-12 col-md-4 form-group m-md-3 text-center" for="email">Ingrese su Email:</label>
+                                <input class="col-12 col-md-4" type="email" name="email" id="" placeholder="Email" required>
+                            </div>
+                            <div class="">
+                                <label class="col-12 col-md-6 p-3 m-1 form-group text-center" for="extra">Consulta:</label>
+                                <textarea class="col-12 col-md-6 m-md-3" name="extra" id="" cols="25" rows="8" placeholder="Ingrese aqui su consulta"></textarea>
+                            </div>
+                            <div>
+                                <button type="button" class="btn btn-success m-2">Enviar</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <!-- Form -->
-                <div class="col text-center">
-                    <form class="m-5" action="">
-                        <div class="p-3">
-                            <label class="col-12 col-md-4 form-group m-md-3 text-center" for="phone">Ingrese su numero de telefono:</label>
-                            <input class="col-12 col-md-4" type="number" name="phone" id="" placeholder="Telefono" required>
-                        </div>
-                        <div>
-                            <label class="col-12 col-md-4 form-group m-md-3 text-center" for="email">Ingrese su Email:</label>
-                            <input class="col-12 col-md-4" type="email" name="email" id="" placeholder="Email" required>
-                        </div>
-                        <div class="">
-                            <label class="col-12 col-md-6 p-3 m-1 form-group text-center" for="extra">Consulta:</label>
-                            <textarea class="col-12 col-md-6 m-md-3" name="extra" id="" cols="25" rows="8" placeholder="Ingrese aqui su consulta"></textarea>
-                        </div>
-                        <div>
-                            <button type="button" class="btn btn-success m-2">Enviar</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </main>
+            </main>
+        </div>
         <!-- Footer -->
-        <footer class="p-3">
+        <footer class="p-3 m-2">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start">
                     <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
