--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="container">
-            <!-- Header -->
-            <header>
-                <div class="row">
-                    <div class= "col p-3 col-12 col-md-6 text-center text-md-start">
-                        <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="Logo Mifar" class="top__header--logo"></a>
-                        <h1 class="p-3 header__title">Mifar</h1>
-                    </div>
-                    <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
-                        <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
-                    </div>
+    <div class="container-fluid cont-princ">
+        <!-- Header -->
+        <header>
+            <div class="row">
+                <div class= "col p-3 col-12 col-md-6 text-center text-md-start">
+                    <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="Logo Mifar" class="top__header--logo"></a>
+                    <h1 class="p-3 header__title">Mifar</h1>
                 </div>
-            </header>
+                <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
+                    <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
+                </div>
+            </div>
+        </header>
+        <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
                 </div>
             </nav>
             <!-- Main -->
-            <main class="container p-3">
+            <main class="container-fluid p-3">
                 <div class="row p-3 m-5">
                     <div class="col-lg-6 lead p-3">
                         <div class="text-center">
@@ -60,7 +60,7 @@
                             <p class="mainIndex__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. In quae facilis sapiente quisquam ullam laboriosam fugiat nisi atque.</p>
                         </div>
                     </div>
-                    <div class="col-lg-6 img-fluid">
+                    <div class="col-lg-6">
                         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-indicators">
                                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -92,29 +92,30 @@
                     </div>
                 </div>
             </main>
-            <!-- Footer -->
-            <footer class="p-3">
-                <div class="row">
-                    <div class="col-md-6 text-center text-md-start">
-                        <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
-                        <p class="footerText footerText--p2" >Telefono emergencias: 0800-111-000</p>
-                    </div>
-                    <div class="col-md-6 justify-items-center align-content-center p-3">
-                        <div class="row justify-content-center align-items-center">
-                            <div class="row w-25">
-                                <a class="d-flex justify-content-center align-items-center footer__instagram" href="https://instagram.com" target="_blank"> <img class="hover__img" src="Images/instagram.svg" alt="Logo de Instagram" ></svg></a>
-                            </div>
-                            <div class="row w-25">
-                                <a class="d-flex justify-content-center align-items-center footer__twitter" href="https://twitter.com" target="_blank"><img class="hover__img" src="Images/twitter.svg" alt="Logo de Twitter"></a>
-                            </div>
-                            <div class="row w-25">
-                                <a class="d-flex justify-content-center align-items-center footer__facebook" href="https://facebook.com" target="_blank"><img class="hover__img" src="Images/facebook.svg" alt="Logo de Facebook"></a>
-                            </div>
+        </div>
+        <!-- Footer -->
+        <footer class="p-3 m-2">
+            <div class="row">
+                <div class="col-md-6 text-center text-md-start">
+                    <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
+                    <p class="footerText footerText--p2" >Telefono emergencias: 0800-111-000</p>
+                </div>
+                <div class="col-md-6 justify-items-center align-items-center p-3">
+                    <div class="row justify-content-center align-items-center">
+                        <div class="row w-25">
+                            <a class="d-flex justify-content-center align-self-center footer__instagram" href="https://instagram.com" target="_blank"> <img class="hover__img" src="Images/instagram.svg" alt="Logo de Instagram" ></svg></a>
+                        </div>
+                        <div class="row w-25">
+                            <a class="d-flex justify-content-center align-self-center footer__twitter" href="https://twitter.com" target="_blank"><img class="hover__img" src="Images/twitter.svg" alt="Logo de Twitter"></a>
+                        </div>
+                        <div class="row w-25">
+                            <a class="d-flex justify-content-center align-self-center footer__facebook" href="https://facebook.com" target="_blank"><img class="hover__img" src="Images/facebook.svg" alt="Logo de Facebook"></a>
                         </div>
                     </div>
                 </div>
-            </footer>
-        </div>
+            </div>
+        </footer>
+    </div>
         <!-- Bootstrap Link JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </div>
