--- a/prestadores.html
+++ b/prestadores.html
@@ -18,63 +18,64 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 </head>
 <body>
-    <div class="container-fluid">
-            <div class="container">
-                <!-- Header -->
-                <header>
-                    <div class="row">
-                        <div class= "col p-3 col-12 col-md-6 text-center text-md-start">
-                            <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="Logo Mifar" class="top__header--logo"></a>
-                            <h1 class="p-3 header__title">Mifar</h1>
-                        </div>
-                        <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
-                            <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
-                        </div>
-                    </div>
-                </header>
-                <nav class="navbar navbar-expand-lg navbar-light">
-                    <div class="container-fluid">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                            <ul class="navbar-nav list-unstyled list-inline f justify-content-space-between">
-                                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                                <li class="nav-item"><a class="nav-link active" aria-current="page" href="prestadores.html">Prestadores</a></li>
-                                <li class="nav-item"><a class="nav-link" href="asociarse.html">Asociarse</a></li>
-                                <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                                <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-        <!-- Main -->
-        <main class="container">
-            <div class="m-0">
-                <div class="col">
-                    <div class="lead text-center m-0 p-3">
-                        <h2 class="mainPrestadores__title">Lorem, ipsum.</h2>
-                        <p class="mainPrestadores__p--1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
-                        <ul class="text-decoration-none list-unstyled mainPrestadores__ul--1">
-                            <li class="">Lorem ipsum dolor sit amet.</li>
-                            <li class="">Lorem, ipsum dolor sit amet consectetur.</li>
-                            <li class="">Lorem ipsum dolor sit amet.</li>
-                        </ul>
-                        <p class="mainPrestadores__p--2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sed at accusamus itaque assumenda fugit. Consectetur architecto optio unde, doloremque, dolores, nihil facilis voluptas deserunt nesciunt sint expedita. Maiores, rem.</p>
-                        <ul class="text-decoration-none list-unstyled mainPrestadores__ul--2">
-                            <li class="">Lorem ipsum dolor sit amet consectetur.</li>
-                            <li class="">Lorem ipsum dolor sit.</li>
-                            <li class="">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                        </ul>
-                    </div>
-                    <div class="text-center m-0 p-2">
-                        <img class="img-thumbnail col-lg-6 img-fluid" src="Images/hospital.jpg" alt="Imagen pasillo de hospital">
-                    </div>
+    <div class="container-fluid cont-princ">
+        <!-- Header -->
+        <header>
+            <div class="row">
+                <div class= "col p-3 col-12 col-md-6 text-center text-md-start">
+                    <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="Logo Mifar" class="top__header--logo"></a>
+                    <h1 class="p-3 header__title">Mifar</h1>
+                </div>
+                <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
+                    <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
                 </div>
             </div>
-        </main>
+        </header>
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <ul class="navbar-nav list-unstyled list-inline f justify-content-space-between">
+                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="prestadores.html">Prestadores</a></li>
+                            <li class="nav-item"><a class="nav-link" href="asociarse.html">Asociarse</a></li>
+                            <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <!-- Main -->
+            <main class="container-fluid">
+                <div class="m-0">
+                    <div class="col">
+                        <div class="lead text-center m-0 p-3">
+                            <h2 class="mainPrestadores__title">Lorem, ipsum.</h2>
+                            <p class="mainPrestadores__p--1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
+                            <ul class="text-decoration-none list-unstyled mainPrestadores__ul--1">
+                                <li class="">Lorem ipsum dolor sit amet.</li>
+                                <li class="">Lorem, ipsum dolor sit amet consectetur.</li>
+                                <li class="">Lorem ipsum dolor sit amet.</li>
+                            </ul>
+                            <p class="mainPrestadores__p--2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sed at accusamus itaque assumenda fugit. Consectetur architecto optio unde, doloremque, dolores, nihil facilis voluptas deserunt nesciunt sint expedita. Maiores, rem.</p>
+                            <ul class="text-decoration-none list-unstyled mainPrestadores__ul--2">
+                                <li class="">Lorem ipsum dolor sit amet consectetur.</li>
+                                <li class="">Lorem ipsum dolor sit.</li>
+                                <li class="">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                            </ul>
+                        </div>
+                        <div class="text-center m-0 p-2">
+                            <img class="img-thumbnail col-lg-6 img-fluid" src="Images/hospital.jpg" alt="Imagen pasillo de hospital">
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
         <!-- Footer -->
-        <footer class="p-3">
+        <footer class="p-3 container-fluid m-2">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start">
                     <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
